fix spacing

--- a/react-site/src/components/About.css
+++ b/react-site/src/components/About.css
@@ -35,8 +35,7 @@
   font-size: 1.5rem;
   padding: 30px;
   line-height: 2rem;
-  background-color: #38598b 
-  ;
+  background-color: #38598b;
   border-radius: 20px;
   color: #e7eaf6;
 }
